several infrastructure updates